--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KERALATOURISM",
+  "name": "keralatourism",
   "version": "1.0.0",
   "description": "This is a website for Kerala Tourism",
   "main": "index.html",
